--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ Django==4.0.6
 django-debug-toolbar==3.5.0
 django-extensions==3.2.0
 Pillow==9.2.0
+python-dotenv==0.20.0
 sqlparse==0.4.2
 tzdata==2022.1
