--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
 asgiref==3.5.2
+Babel==2.10.3
+certifi==2022.6.15
+charset-normalizer==2.1.0
 Django==4.0.6
 django-debug-toolbar==3.5.0
 django-extensions==3.2.0
+django-money==3.0.0
+idna==3.3
 Pillow==9.2.0
+py-moneyed==2.0
+pycountry==22.3.5
 python-dotenv==0.20.0
+pytz==2022.1
+requests==2.28.1
 sqlparse==0.4.2
+stripe==4.0.2
+typing_extensions==4.3.0
 tzdata==2022.1
+urllib3==1.26.11
