--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ charset-normalizer==2.1.0
 Django==4.0.6
 django-debug-toolbar==3.5.0
 django-extensions==3.2.0
+django-mathfilters==1.0.0
 django-money==3.0.0
+fontawesomefree==6.1.2
 idna==3.3
 Pillow==9.2.0
 py-moneyed==2.0
