--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,17 @@ django-debug-toolbar==3.5.0
 django-extensions==3.2.0
 django-mathfilters==1.0.0
 django-money==3.0.0
+docutils==0.19
 fontawesomefree==6.1.2
 idna==3.3
 Pillow==9.2.0
 py-moneyed==2.0
 pycountry==22.3.5
+python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2022.1
 requests==2.28.1
+six==1.16.0
 sqlparse==0.4.2
 stripe==4.0.2
 typing_extensions==4.3.0
